src/objects/Lead.object
<CustomObject>
<businessProcesses>
    <fullName>ASD</fullName>
    <isActive>true</isActive>
    <values>
        <fullName>Abierto</fullName>
        <default>true</default>
    </values>
    <values>
            <fullName>Apertura</fullName>
        </values>
        <values>
        <fullName>Cerrado</fullName>
    </values>
    <values>
        <fullName>Cotizada</fullName>
    </values>
</businessProcesses>
<businessProcesses>
    <fullName>MX_WB_PC_Telemarketing</fullName>
    <description>Nuevo proceso de candidatos para Telemarketing</description>
    <isActive>true</isActive>
    <values>
        <fullName>Abierto</fullName>
        <default>true</default>
    </values>
    <values>
            <fullName>Apertura</fullName>
        </values>
        <values>
        <fullName>Cerrado</fullName>
    </values>
    <values>
        <fullName>Cotizada</fullName>
    </values>
</businessProcesses>
<businessProcesses>
    <fullName>MX_SB_VTS_Telemarketing</fullName>
    <description>Nuevo proceso de ventas para recordtype MX_SB_VTS_Telemarketing</description>
    <isActive>true</isActive>
    <values>
        <fullName>Apertura de Cuenta</fullName>
    </values>
    <values>
        <fullName>Contacto</fullName>
        <default>true</default>
    </values>
    <values>
        <fullName>Información y Condiciones</fullName>
    </values>
</businessProcesses>
<fields>
    <fullName>Agencia__c</fullName>
    <label>Agencia</label>
    <length>15</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Apellido_Materno__c</fullName>
    <label>Apellido Materno</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>CrearCotizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crear cotización</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>Fecha_Nacimiento__c</fullName>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</fields>
<fields>
    <fullName>Folio_Cotizacion__c</fullName>
    <label>Folio Cotización</label>
    <length>10</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Hora_contacto__c</fullName>
    <description>Campo para guardar la fecha y hora en la cual el cliente requiere que se le vuelva a contactar.</description>
    <label>Hora De Contacto</label>
    <type>DateTime</type>
</fields>
<fields>
    <fullName>Hora_de_contacto_15_min__c</fullName>
    <description>Resta 45 minutos a la hora de contacto para enviar la notificación correspondiente 15 minutos despues</description>
    <formula>Hora_contacto__c-0.03125</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora de contacto 15 min</label>
    <type>DateTime</type>
</fields>
<fields>
    <fullName>Hora_de_contacto_30_min__c</fullName>
    <formula>Hora_contacto__c-0.020833333</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora de contacto 30 min</label>
    <type>DateTime</type>
</fields>
<fields>
    <fullName>Hora_de_contacto_45_min__c</fullName>
    <description>Campo que le resta 15 minutos a la hora de contacto para enviar la notificacion 45 minutos despues de la hora de contacto</description>
    <formula>Hora_contacto__c-0.010416667</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora de contacto 45 min</label>
    <type>DateTime</type>
</fields>
<fields>
    <fullName>Llamada_Realizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se realizó la llamada asociada. Se actualiza por medio del trigger TaskTrigger_tgr</description>
    <label>Llamada Realizada?</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Modelo__c</fullName>
    <label>Modelo</label>
    <length>4</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Numero_de_Serie__c</fullName>
    <label>Número de Serie</label>
    <length>25</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Primera_Notificacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que se debe realizar la primera notificación, se actualiza por medio de flujo de trabajo activa primera notificacion</description>
    <label>Primera Notificacion</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>SAN151_NoContacto__c</fullName>
    <label>No Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefono no Existe</fullName>
            </value>
            <value>
                <fullName>Suspendido</fullName>
            </value>
            <value>
                <fullName>Sin extensión</fullName>
            </value>
            <value>
                <fullName>Fuera de servicio</fullName>
            </value>
            <value>
                <fullName>No contesta</fullName>
            </value>
            <value>
                <fullName>Fuera del área de servicio</fullName>
            </value>
            <value>
                <fullName>Buzón Contestadora</fullName>
            </value>
            <value>
                <fullName>Tono de Fax</fullName>
            </value>
            <value>
                <fullName>Prueba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>Segunda_Notificacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determina Cuando se debe activar la segunda notificación</description>
    <label>Segunda Notificacion</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>TelefonoCelular__c</fullName>
    <label>Teléfono Celular</label>
    <type>Phone</type>
</fields>
<fields>
    <fullName>Telefono_Celular2__c</fullName>
    <label>Teléfono Celular 2</label>
    <type>Phone</type>
</fields>
<fields>
    <fullName>Tercera_Notificacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activa la tercera notificacion</description>
    <label>Tercera Notificacion</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>Transferenciaatencionaclientes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transferencia atención a clientes</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>submarca__c</fullName>
    <label>Sub Marca</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Estatusdecotizacion__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MX_WB_lst_EstatusPrimerContacto__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Creada</fullName>
                <default>true</default>
                <label>Creada</label>
            </value>
            <value>
                <fullName>Tarificada</fullName>
            </value>
            <value>
                <fullName>Formalizada</fullName>
            </value>
            <value>
                <fullName>Emitida</fullName>
            </value>
            <value>
                <fullName>Cobrada</fullName>
            </value>
            <value>
                <fullName>Grabadora</fullName>
            </value>
            <value>
                <fullName>Ocupado</fullName>
            </value>
            <value>
                <fullName>Mala Calidad De Audio (Eco, Interferencia, Estática)</fullName>
            </value>
            <value>
                <fullName>No Contestan</fullName>
            </value>
            <value>
                <fullName>Buzón</fullName>
            </value>
            <value>
                <fullName>Suspendido</fullName>
            </value>
            <value>
                <fullName>Inexistente</fullName>
            </value>
            <value>
                <fullName>Fuera del área de servicio (móvil)</fullName>
            </value>
            <value>
                <fullName>Fuera de servicio (fijo)</fullName>
            </value>
            <value>
                <fullName>Cliente molesto</fullName>
            </value>
            <value>
                <fullName>Bloqueo sanas prácticas</fullName>
            </value>
            <value>
                <fullName>Finado</fullName>
            </value>
            <value>
                <fullName>Número equivocado</fullName>
            </value>
            <value>
                <fullName>Está de viaje</fullName>
            </value>
            <value>
                <fullName>Se deja mensaje con familiar</fullName>
            </value>
            <value>
                <fullName>Agendado</fullName>
            </value>
            <value>
                <fullName>Convertido</fullName>
            </value>
            <value>
                <fullName>Cliente Cuelga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>Extension__c</fullName>
    <label>Extensión</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</fields>
<fields>
    <fullName>Colonia__c</fullName>
    <label>Colonia</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</fields>
<fields>
    <fullName>Delegacion__c</fullName>
    <label>Delegación</label>
    <length>120</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Edad__c</fullName>
    <label>Edad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</fields>
<fields>
    <fullName>EnviarCTI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnviarCTI</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>IdOportunidad__c</fullName>
    <description>Id de la Oportunidad, este campo se llena desde el Web-To-Lead.</description>
    <label>IdOportunidad</label>
    <length>20</length>
    <type>Text</type>
</fields>
    <fields>
        <fullName>MX_SB_VTS_4Digitos__c</fullName>
        <description>Ultimos digitos de cuenta bancaria</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Últimos 4 dígitos</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Ciclo_de_vida__c</fullName>
        <description>Ciclo de vida de Lead</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ciclo de vida</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_FechaCallme__c</fullName>
        <description>Fecha de call me back</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Agenda</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_HoraCallMe__c</fullName>
        <description>Hora de call me back</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hora Contacto</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Producto_Nuevo__c</fullName>
        <description>Indica si se trata de producto nuevo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Producto Nuevo</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Propension_Producto__c</fullName>
        <description>Indica la prospension del producto</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Propensión Producto</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Rango_Salario__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rango Salario</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ReferenciaCliente__c</fullName>
        <description>Indica referencia del cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referencia del cliente</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Segmento_Bancario__c</fullName>
        <description>Indica segmento bancario del prospecto</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Segmento Bancario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Tipificacion__c</fullName>
        <description>Tipificación de CTI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipificación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_VentaDirecta__c</fullName>
        <description>Indica si se trata de venta directa</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Venta Directa</label>
        <length>2</length>
        <type>Text</type>
    </fields>
<fields>
    <fullName>MX_WB_Circulacion__c</fullName>
    <label>Circulación</label>
    <length>20</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Genero__c</fullName>
    <label>Género</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Masculino</fullName>
            </value>
            <value>
                <fullName>Femenino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>Hora__c</fullName>
    <label>Hora</label>
    <length>25</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_Cliente_Unico_BBVA__c</fullName>
    <label>Cliente Único BBVA</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_Cliente_Unico_Seguros__c</fullName>
    <label>Cliente Único Seguros</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Lista_Negra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lista Negra</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>MX_WB_Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo provisional para establecer la relación entre el contacto y la oportunidad generada en la conversión.</description>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades Comerciales</relationshipLabel>
    <relationshipName>Oportunidades_Comerciales</relationshipName>
    <type>Lookup</type>
</fields>
<fields>
    <fullName>MX_WB_ContadorRemarcado__c</fullName>
    <label>Contador remarcado</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_DisabledByTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el Lead se cerro por medio del trigger</description>
    <label>MX_WB_DisabledByTrigger</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>Motivo_de_no_elegibilidad__c</fullName>
    <label>Motivo de no elegibilidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motivo uso comercial</fullName>
            </value>
            <value>
                <fullName>Uso de taxi</fullName>
            </value>
            <value>
                <fullName>Mayor a 3.5 toneladas</fullName>
            </value>
            <value>
                <fullName>Antigüedad</fullName>
            </value>
            <value>
                <fullName>Fronterizo / legalizado</fullName>
            </value>
            <value>
                <fullName>Salvamento / Siniestrado</fullName>
            </value>
            <value>
                <fullName>Auto fuera de Base</fullName>
            </value>
            <value>
                <fullName>Fuera de politica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>Motivonointeres__c</fullName>
    <label>Motivo de no</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No contactado</fullName>
            </value>
            <value>
                <fullName>No molestar</fullName>
            </value>
            <value>
                <fullName>No interesado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>Nacionalidad__c</fullName>
    <label>Nacionalidad</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Numero_Exterior__c</fullName>
    <label>Número Exterior</label>
    <length>10</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Numero_Interior__c</fullName>
    <label>Número Interior</label>
    <length>60</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Esencial</fullName>
            </value>
            <value>
                <fullName>Basico</fullName>
            </value>
            <value>
                <fullName>Amplio</fullName>
            </value>
            <value>
                <fullName>Amplio Plus</fullName>
            </value>
            <value>
                <fullName>Plan Personalizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>Priority__c</fullName>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>Producto_Interes__c</fullName>
    <label>Producto de Interés</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compra Perfecta</fullName>
            </value>
            <value>
                <fullName>No especifica</fullName>
            </value>
            <value>
                <fullName>Otros Ramos ( Vida / Salud )</fullName>
            </value>
            <value>
                <fullName>Seguro auto Clasico</fullName>
            </value>
            <value>
                <fullName>Seguro de auto</fullName>
                <label>Seguro De Auto</label>
            </value>
            <value>
                <fullName>Seguro de Auto Otros Usos</fullName>
            </value>
            <value>
                <fullName>Seguro de auto Udi</fullName>
            </value>
            <value>
                <fullName>Seguro de Bicicleta</fullName>
            </value>
            <value>
                <fullName>Seguro de Moto</fullName>
            </value>
            <value>
                <fullName>Seguro de Moto UDI</fullName>
            </value>
            <value>
                <fullName>Seguro Fronterizo</fullName>
            </value>
            <value>
                <fullName>Seguro Legalizado</fullName>
            </value>
            <value>
                <fullName>Wiberizate</fullName>
            </value>
            <value>
                <fullName>Seguro de Moto Bancomer</fullName>
            </value>
            <value>
                <fullName>Seguro de auto fronterizo Bancomer</fullName>
            </value>
            <value>
                <fullName>Seguro de auto nacionalizado</fullName>
            </value>
            <value>
                <fullName>Auto Seguro Dinamico</fullName>
            </value>
            <value>
                <fullName>RC Carretero</fullName>
            </value>
			 <value>
                    <fullName>Hogar</fullName>
                </value>
                <value>
                    <fullName>Vida</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>Profesion__c</fullName>
    <label>Profesión</label>
    <length>255</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>RFCAsesor__c</fullName>
    <label>RFC Asesor</label>
    <length>15</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>RFC__c</fullName>
    <label>RFC</label>
    <length>25</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>SAN151_ContactoEfectivo__c</fullName>
    <label>Motivos de no contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TONO DE FAX</fullName>
            </value>
            <value>
                <fullName>EMPRESA SIN EXTENSION</fullName>
            </value>
            <value>
                <fullName>FUERA DE SERVICIO</fullName>
            </value>
            <value>
                <fullName>NO CONTESTA</fullName>
            </value>
            <value>
                <fullName>NO SE ENCUENTRA</fullName>
            </value>
            <value>
                <fullName>PRUEBA</fullName>
            </value>
            <value>
                <fullName>TEL. OCUPADO</fullName>
            </value>
            <value>
                <fullName>GRABADORA/CONTESTADORA</fullName>
            </value>
            <value>
                <fullName>TEL. INEXISTENTE</fullName>
            </value>
            <value>
                <fullName>BUZÓN DE VOZ</fullName>
            </value>
            <value>
                <fullName>AGENDA</fullName>
                <isActive>false</isActive>
                <label>AGENDA</label>
            </value>
            <value>
                <fullName>CLIENTE CUELGA NO ESCUCHA SCRIPT</fullName>
                <isActive>false</isActive>
                <label>CLIENTE CUELGA NO ESCUCHA SCRIPT</label>
            </value>
            <value>
                <fullName>CLIENTE SOLICITA LLAMAR DESPUES</fullName>
                <isActive>false</isActive>
                <label>CLIENTE SOLICITA LLAMAR DESPUES</label>
            </value>
            <value>
                <fullName>CONTACTO MERCADOTECNIA</fullName>
                <isActive>false</isActive>
                <label>CONTACTO MERCADOTECNIA</label>
            </value>
            <value>
                <fullName>EQUIVOCADO  INCORRECTO</fullName>
                <isActive>false</isActive>
                <label>EQUIVOCADO  INCORRECTO</label>
            </value>
            <value>
                <fullName>FINADO</fullName>
                <isActive>false</isActive>
                <label>FINADO</label>
            </value>
            <value>
                <fullName>FUERA DEL AREA DE SERVICIO</fullName>
                <isActive>false</isActive>
                <label>FUERA DEL AREA DE SERVICIO</label>
            </value>
            <value>
                <fullName>INFORMACIÓN SOBRE SU POLIZA</fullName>
                <isActive>false</isActive>
                <label>INFORMACIÓN SOBRE SU POLIZA</label>
            </value>
            <value>
                <fullName>SUSUPENDIDO</fullName>
                <isActive>false</isActive>
                <label>SUSUPENDIDO</label>
            </value>
            <value>
                <fullName>TIPIFICACION</fullName>
                <isActive>false</isActive>
                <label>TIPIFICACION</label>
            </value>
            <value>
                <fullName>TRANSFERENCIA A ATENCIÓN A CLIENTES</fullName>
                <isActive>false</isActive>
                <label>TRANSFERENCIA A ATENCIÓN A CLIENTES</label>
            </value>
            <value>
                <fullName>TRANSFERENCIA A SINIESTROS</fullName>
                <isActive>false</isActive>
                <label>TRANSFERENCIA A SINIESTROS</label>
            </value>
            <value>
                <fullName>TRANSFERENCIA MOTOS</fullName>
                <isActive>false</isActive>
                <label>TRANSFERENCIA MOTOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>SAN151_ContactoNoEfectivo__c</fullName>
    <label>Motivos de no venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTO NO EN LA BASE</fullName>
            </value>
            <value>
                <fullName>AUN NO COMPRA LA UNIDAD</fullName>
            </value>
            <value>
                <fullName>YA CUENTA CON SEGURO WIBE</fullName>
                <label>YA CUENTA CON SEGURO</label>
            </value>
            <value>
                <fullName>YA CONTRATO CON OTRA MARCA DE SEGUROS</fullName>
            </value>
            <value>
                <fullName>LLAMADA INFORMATIVA</fullName>
            </value>
            <value>
                <fullName>CLIENTE YA NO INTERESADO</fullName>
            </value>
            <value>
                <fullName>FOLIO DUPLICADO</fullName>
            </value>
            <value>
                <fullName>CLIENTE DESCONFÍA DE PRODUCTO (NO PROPORCIONA DATOS)</fullName>
            </value>
            <value>
                <fullName>ASESORIA WEB</fullName>
            </value>
            <value>
                <fullName>CLIENTE CUELGA</fullName>
            </value>
            <value>
                <fullName>CLIENTE MOLESTO NO VENTA</fullName>
            </value>
            <value>
                <fullName>AGENDA</fullName>
            </value>
            <value>
                <fullName>AUN CUENTA CON SEGURO</fullName>
            </value>
            <value>
                <fullName>PRECIO ALTO - MUY CARO</fullName>
            </value>
            <value>
                <fullName>NO LE GUSTAN LOS SEGUROS</fullName>
            </value>
            <value>
                <fullName>SIN MEDIO DE PAGO</fullName>
            </value>
            <value>
                <fullName>DESEA PROMOCION ESPECIAL</fullName>
            </value>
            <value>
                <fullName>AUTO SINIESTRADO</fullName>
                <isActive>false</isActive>
                <label>AUTO SINIESTRADO</label>
            </value>
            <value>
                <fullName>AUTO USO COMERCIAL</fullName>
                <isActive>false</isActive>
                <label>AUTO USO COMERCIAL</label>
            </value>
            <value>
                <fullName>AUTOFINANCIAMIENTO</fullName>
                <isActive>false</isActive>
                <label>AUTOFINANCIAMIENTO</label>
            </value>
            <value>
                <fullName>AÚN NO COMPRA LA UNIDAD</fullName>
                <isActive>false</isActive>
                <label>AÚN NO COMPRA LA UNIDAD</label>
            </value>
            <value>
                <fullName>CARACTERISTICAS NO ASEGURABLES</fullName>
                <isActive>false</isActive>
                <label>CARACTERISTICAS NO ASEGURABLES</label>
            </value>
            <value>
                <fullName>CHOFER PRIVADO - NO VENTA</fullName>
                <isActive>false</isActive>
                <label>CHOFER PRIVADO - NO VENTA</label>
            </value>
            <value>
                <fullName>CLIENTE INTERESADO</fullName>
                <isActive>false</isActive>
                <label>CLIENTE INTERESADO</label>
            </value>
            <value>
                <fullName>DESCONFIANZA DEL PRODUCTO</fullName>
                <isActive>false</isActive>
                <label>DESCONFIANZA DEL PRODUCTO</label>
            </value>
            <value>
                <fullName>FINADO</fullName>
                <isActive>false</isActive>
                <label>FINADO</label>
            </value>
            <value>
                <fullName>INFORMACION SOBRE POLIZA</fullName>
                <isActive>false</isActive>
                <label>INFORMACION SOBRE POLIZA</label>
            </value>
            <value>
                <fullName>LEGALIZADO/FONTERIZO</fullName>
                <isActive>false</isActive>
                <label>LEGALIZADO/FONTERIZO</label>
            </value>
            <value>
                <fullName>MALA EXPERIENCIA CON LOS SEGUROS</fullName>
                <isActive>false</isActive>
                <label>MALA EXPERIENCIA CON LOS SEGUROS</label>
            </value>
            <value>
                <fullName>MODELO</fullName>
                <isActive>false</isActive>
                <label>MODELO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>MX_WB_Cuenta__c</fullName>
    <label>Cuenta</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Tipo_Persona__c</fullName>
    <label>Tipo de Persona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Física (Predeterminado)</fullName>
                <default>true</default>
                <label>Física (Predeterminado)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>Tipo_de_registro_maestro__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de registro maestro</label>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_EnvioCTI__c</fullName>
    <description>Se almacena la fecha de envió a CTI</description>
    <label>Fecha envió CTI</label>
    <type>Date</type>
</fields>
<fields>
    <fullName>MX_WB_EstatusCTI__c</fullName>
    <description>Estatus que devuelve CTI después de la atención de un lead.</description>
    <label>Estatus CTI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUN NO COMPRA LA UNIDAD</fullName>
            </value>
            <value>
                <fullName>AUTO NO EN LA BASE</fullName>
            </value>
            <value>
                <fullName>AUTO USO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>AUTO-FINANCIAMIENTO</fullName>
            </value>
            <value>
                <fullName>AUTO-SINIESTRADO</fullName>
            </value>
            <value>
                <fullName>CLIENTE CUELGA</fullName>
            </value>
            <value>
                <fullName>CLIENTE INTERESADO</fullName>
            </value>
            <value>
                <fullName>DESCONFIANZA DEL PRODUCTO</fullName>
            </value>
            <value>
                <fullName>EMPRESA SIN EXTENSIÓN</fullName>
            </value>
            <value>
                <fullName>EQUIVOCADO INCORRECTO</fullName>
            </value>
            <value>
                <fullName>ESTÁ COMPARANDO COTIZACIÓN</fullName>
            </value>
            <value>
                <fullName>FINADO</fullName>
            </value>
            <value>
                <fullName>FUERA DE SERVICIO</fullName>
            </value>
            <value>
                <fullName>FUERA DEL ÁREA DE SERVICIO</fullName>
            </value>
            <value>
                <fullName>GRABADORA CONTESTADORA</fullName>
            </value>
            <value>
                <fullName>INFORMACIÓN SOBRE PÓLIZA</fullName>
            </value>
            <value>
                <fullName>MALA EXPERIENCIA CON SEGUROS</fullName>
            </value>
            <value>
                <fullName>MODELO</fullName>
            </value>
            <value>
                <fullName>MUY CARO PRECIO ALTO</fullName>
            </value>
            <value>
                <fullName>NO CONTESTA</fullName>
            </value>
            <value>
                <fullName>NO LE INTERESA</fullName>
            </value>
            <value>
                <fullName>NO SE ENCUENTRA</fullName>
            </value>
            <value>
                <fullName>NO TIENE TIEMPO</fullName>
            </value>
            <value>
                <fullName>NO VIVE AHÍ</fullName>
            </value>
            <value>
                <fullName>NO VOLVER A LLAMAR</fullName>
            </value>
            <value>
                <fullName>OCUPADO</fullName>
            </value>
            <value>
                <fullName>PRUEBA</fullName>
            </value>
            <value>
                <fullName>SIN MEDIO DE PAGO</fullName>
            </value>
            <value>
                <fullName>SUCURSAL BBVA</fullName>
            </value>
            <value>
                <fullName>SUSPENDIDO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>MX_WB_FechaPolizaAnterior__c</fullName>
    <label>FechaPolizaAnterior</label>
    <type>Date</type>
</fields>
<fields>
    <fullName>MX_WB_No_envios_CTI__c</fullName>
    <label>No envíos CTI</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</fields>
<fields>
    <fullName>MX_WB_Poliza__c</fullName>
    <label>Poliza</label>
    <length>10</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_Prima__c</fullName>
    <label>Prima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</fields>
<fields>
    <fullName>MX_WB_Status_no_contacto_CTI__c</fullName>
    <label>Status no contacto CTI</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_TieneAuto__c</fullName>
    <label>TieneAuto</label>
    <length>1</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_TipoCuenta__c</fullName>
    <label>TipoCuenta</label>
    <length>10</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_TipoPersona__c</fullName>
    <label>TipoPersona</label>
    <length>1</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_int_TerminacionTarjeta__c</fullName>
    <description>Nuevo campo tele marketing para almacenar los últimos 5 dígitos de la tarjeta bancaria.</description>
    <inlineHelpText>Los últimos 5 dígitos de la tarjeta, solo acepta caracteres numéricos.</inlineHelpText>
    <label>Terminación Tarjeta</label>
    <length>5</length>
    <type>Text</type>
</fields>
</CustomObject>